# gitree

./: .gitlab-ci.yml  Cargo.toml  README.md  build.rs
src/: app.rs  cli.rs  indent.rs  lscolors.rs  main.rs  options.rs  output.rs  pathtree.rs  report.rs  settings.rs  utils.rs
