[package]
name = "gitree"
version = "0.1.0"
authors = ["Vivien Maisonneuve <v.maisonneuve@gmail.com>"]
edition = "2018"
description = "Print a directory tree while respecting gitignore rules."
license = "MIT"
homepage = "https://gitlab.com/vmaison/gitree"
repository = "https://gitlab.com/vmaison/gitree.git"
readme = "README.md"
build = "build.rs"

[dependencies]
ansi_term = "0.12.1"
atty = "0.2.14"
clap = "2.33.3"
derive_more = "0.99.1"
ignore = "0.4.7"
lscolors = "0.7.1"

[build-dependencies]
clap = "2.33.3"
