[package]
name = "gitree"
version = "0.1.0"
authors = ["Vivien Maisonneuve <v.maisonneuve@gmail.com>"]
edition = "2021"
description = "Print a directory tree without files ignored by Git"
readme = "README.md"
homepage = "https://github.com/vivienm/gitree"
repository = "https://github.com/vivienm/gitree.git"
license = "MIT"
build = "build.rs"

[dependencies]
ansi_term = "0.12.1"
atty = "0.2.14"
derive_more = "0.99.1"
ignore = "0.4.7"
lscolors = "0.7.1"
structopt = "0.3.21"

[build-dependencies]
structopt = "0.3.21"
